tests/base/invalid/MethodCall_CompileFail_2.whiley
define dummy as process {int x}

void dummy::f(int x):
    out.println(str(x))

void System::main([string] args):
    this.f(1)
